# rusty_agent

./: Cargo.toml  README.md
certificates/: cert.pem  key.pem
rusty_assets/: db.sqlite
src/: main.rs
src/docker/: docker-compose.yml
src/docs/: counting.sh  notes.txt  prime.sh
src/exec/: command.rs  config.rs  global.rs  mod.rs  mongodb.rs  opensearch.rs  scheduled_job.rs  script.rs  sqlite.rs
src/http/: auth.rs  config.rs  mod.rs  request.rs  response.rs  server.rs
src/lib/dockerfiles/: linux_dockerfile
src/lib/job_output/: health_check.output
src/lib/opensearch/: docker-compose.yaml
src/lib/windows_script/: auto_start.ps1
src/metrics/: cpu.rs  disk.rs  memory.rs  metrics.rs  mod.rs  os.rs
src/utils/: download.rs  encrypt.rs  error.rs  fs.rs  logger.rs  mod.rs  testfile.txt
